# vargrid

./: .gitignore  CMakeLists.txt  README.md
src/: array_operations.cc  array_operations.h  cappi.cc  cappi.h  grid.cc  grid.h  io.cc  io.h  main.cc  metadata.cc  metadata.h  pch.h  reader.cc  reader.h  types.h  util.h  writer.cc  writer.h
src/gridding/: cappi.cc  cappi.h  config.h  cost_function.h  leroi.cc  leroi.h  leroi_core.h  observation_operator.cc  observation_operator.h  solver.h  variational.cc  variational.h
src/post/: hid.cc  hid.h  pipeline.cc  post_processor.h  steiner.cc  steiner.h
src/vargrid/: config.h  cost_function.h  main.cc  observation_operator.cc  observation_operator.h  vargrid.cc  vargrid.h
tests/: test_leroi_core.cc
